# Symlib

./: .coverage  DOCUMENTATION.md  README.md  benchmark_numba.py  builder.py  conftest.py  construction.py  dashboard.py  domain.py  engine.py  fix_indent.py  fix_indent_v2.py  fix_lean4.py  fix_lean4_final.py  fix_sorry.py  interactive_dashboard.py  kaggle_search.py  lean4.py  m6_deep_warm.json  obstruction.py  pyproject.toml  ses_analyzer.py  showcase.py  spike_analysis.py  test_autodetect.py  test_engine.py  theorems.py  torsor.py  update_lean4_nb.py  upgrade_h3.py  verify_export.py  weights.py
.jules/: bolt.md
symlib/: __init__.py  autodetect.py  domain.py  theorems.py
symlib/kernel/: construction.py  group_algebra.py  manifold.py  obstruction.py  ses_analyzer.py  verify.py  weights.py
symlib/proof/: builder.py  lean4.py
symlib/search/: cli.py  equivariant.py  viz.py
symlib_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_breakthroughs.py  test_engine.py  test_generalized_k.py  test_kernel.py  test_manifold.py  test_search_cli.py  test_viz.py
