[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symlib-core"
version = "2.0.0"
description = "Global structure in highly symmetric systems via the short exact sequence 0→H→G→G/H→0"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["combinatorics", "group-theory", "symmetry", "hamiltonian", "obstruction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev  = ["pytest>=7", "pytest-cov"]
lean = []  # Lean 4 export requires no extra Python deps

[tool.setuptools.packages.find]
where = ["."]
include = ["symlib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
